
syntax = "proto3";

option go_package = "github.com/MLFlexer/DSYSEX1/tree/main/ituserver/ituserver";

package ituserver;

service Cources {
    rpc GetCourses (CourseRequest) returns (CourseReply) {}
}

message CourseRequest {
    string id = 1;
}

message CourseReply {
    string id = 1;
    string name = 2;
    string teacher = 3;
    string courseManager = 4;
    int32 numParticipants = 5;
    string semester = 6;
    float ECTS = 7;
    string programmingLang = 8;
}